# src/routes/specifications.routes.ts
@@ -1,16 +1,16 @@
 import { Router } from 'express';
 
-import { createSpecificationController } from '../modules/cars/useCases/createSpecification';
-import { listSpecificationsController } from '../modules/cars/useCases/listSpecifications';
+import { ensureAutheticated } from '../middlewares/ensureAutheticated';
+import { CreateSpecificationController } from '../modules/cars/useCases/createSpecification/CreateSpecificationController';
+import { ListSpecificationsController } from '../modules/cars/useCases/listSpecifications/ListSpecificationsController';
 
 const specificationsRoutes = Router();
 
-specificationsRoutes.post('/', (request, response) => {
-  return createSpecificationController.handle(request, response);
-});
+const createSpecificationController = new CreateSpecificationController();
+const listSpecificationsController = new ListSpecificationsController();
 
-specificationsRoutes.get('/', (request, response) => {
-  return listSpecificationsController.handle(request, response);
-});
+specificationsRoutes.use(ensureAutheticated);
+specificationsRoutes.post('/', createSpecificationController.handle);
+specificationsRoutes.get('/', listSpecificationsController.handle);
 
 export { specificationsRoutes };
